fix spacing below note

--- a/app/styles/components/customize/_customize_edition_header.scss
+++ b/app/styles/components/customize/_customize_edition_header.scss
@@ -78,7 +78,7 @@
     justify-content: space-between;
     align-items: center;
     position: relative;
-    margin-bottom: 50px;
+    margin-bottom: 25px;
     .text {
       flex: 2;
       padding: 20px 25px;
